# marsyas

./: CMakeLists.txt
cmake-modules/: marsyas-detect.cmake
src/marsyas/: CMakeLists.txt
src/swig/python/: CMakeLists.txt
src/swig/python/modules/: CMakeLists.txt
src/tests/black_box/: CMakeLists.txt
