
add_subdirectory(modules)
add_subdirectory(scripts)



INCLUDE_DIRECTORIES(${Python_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/swig/)


SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR})
SET(CMAKE_SWIG_FLAGS "")

SET_TARGET_PROPERTIES (marsyas
  PROPERTIES BUILD_WITH_INSTALL_RPATH 1
             INSTALL_NAME_DIR "/usr/local/lib"
  )

SET_SOURCE_FILES_PROPERTIES(marsyas.i 
  PROPERTIES CPLUSPLUS ON
             SWIG_FLAGS "-includeall"
)

SET_PROPERTY(SOURCE ../realvec.i PROPERTY CPLUSPLUS ON)

SWIG_ADD_LIBRARY(marsyas_py TYPE MODULE LANGUAGE python SOURCES marsyas.i)

SWIG_LINK_LIBRARIES(marsyas_py marsyas ${OS_LIBS} ${Python_LIBRARIES})

install(TARGETS marsyas_py LIBRARY DESTINATION ${Python_SITEARCH})

install(
  FILES ${CMAKE_CURRENT_BINARY_DIR}/marsyas.py
  DESTINATION ${Python_SITEARCH}
)
